// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FactoryOverviewFilter > renders correctly when route name is realtime 1`] = `
<div
  class=""
>
  <!--v-if-->
  <!--v-if-->
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    density="compact"
    disabled="false"
    disabledvalues=""
    eager=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="text"
    itemvalue="value"
    loading="false"
    location="bottom right"
    menuinputclass="my-4"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M6,13H18V11H6M3,6V8H21V6M10,18H14V16H10V18Z"
    prependtext="Status: "
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="false"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="false"
    density="compact"
    disabled="false"
    disabledvalues=""
    eager=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="text"
    itemvalue="value"
    loading="false"
    location="bottom right"
    menuinputclass="my-4"
    menuinputtype="primary"
    modelvalue="primary"
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M1.39,18.36L3.16,16.6L4.58,18L5.64,16.95L4.22,15.54L5.64,14.12L8.11,16.6L9.17,15.54L6.7,13.06L8.11,11.65L9.53,13.06L10.59,12L9.17,10.59L10.59,9.17L13.06,11.65L14.12,10.59L11.65,8.11L13.06,6.7L14.47,8.11L15.54,7.05L14.12,5.64L15.54,4.22L18,6.7L19.07,5.64L16.6,3.16L18.36,1.39L22.61,5.64L5.64,22.61L1.39,18.36Z"
    prependtext=""
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="false"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="true"
    density="compact"
    disabled="false"
    disabledvalues=""
    eager=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    location="bottom right"
    menuinputclass="my-4"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
    prependtext="Factories: "
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="false"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="true"
    density="compact"
    disabled="false"
    disabledvalues=""
    eager=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object]"
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    location="bottom right"
    menuinputclass="my-4"
    menuinputtype="primary"
    modelvalue=""
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M21,16H3V4H21M21,2H3C1.89,2 1,2.89 1,4V16A2,2 0 0,0 3,18H10V20H8V22H16V20H14V18H21A2,2 0 0,0 23,16V4C23,2.89 22.1,2 21,2Z"
    prependtext="Stations: "
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="false"
  />
</div>
`;

exports[`FactoryOverviewFilter > renders correctly when route name is timeline 1`] = `
<div
  class=""
>
  <div
    class="my-4"
  >
    <selection-input-stub
      appendtext=" undefined"
      checkbox="true"
      coloractiveprepend="true"
      density="compact"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="true"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="value"
      itemvalue="value"
      loading="false"
      menuinputtype="primary"
      modelvalue="8"
      numericorderby="false"
      placeholder=""
      prepend-inner-icon="M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"
      prependtext="Last {hour} hours"
      removenonexistentselections="false"
      required="true"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="false"
    />
  </div>
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="true"
    density="compact"
    disabled="false"
    disabledvalues=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="true"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="true"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext="prependText"
    itemtext="text"
    itemvalue="value"
    loading="false"
    menuinputclass="my-4"
    menuinputtype="primary"
    modelvalue="oee"
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4M12,6A6,6 0 0,0 6,12A6,6 0 0,0 12,18A6,6 0 0,0 18,12A6,6 0 0,0 12,6M12,8A4,4 0 0,1 16,12A4,4 0 0,1 12,16A4,4 0 0,1 8,12A4,4 0 0,1 12,8M12,10A2,2 0 0,0 10,12A2,2 0 0,0 12,14A2,2 0 0,0 14,12A2,2 0 0,0 12,10Z"
    prependtext=""
    removenonexistentselections="false"
    required="true"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="false"
  />
  <!--v-if-->
  <!--v-if-->
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="true"
    density="compact"
    disabled="false"
    disabledvalues=""
    eager=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups=""
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="false"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    location="bottom right"
    menuinputclass="my-4"
    menuinputtype="primary"
    modelvalue="11,12"
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
    prependtext="Factories: "
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="true"
    someselected="false"
    totalcount="0"
    usechips="false"
  />
  <selection-input-stub
    checkbox="true"
    coloractiveprepend="true"
    density="compact"
    disabled="false"
    disabledvalues=""
    eager=""
    emittoggleall="false"
    emptyequalsallselected="false"
    error="false"
    filled="true"
    groupidkey="id"
    groups="[object Object],[object Object]"
    groupsorderby="name"
    hiddenitemscount="0"
    hidesearch="false"
    hint=""
    inverted="false"
    isgroupedselect="true"
    issingleselect="false"
    itemflag=""
    itemgroupidkey="groupId"
    items="[object Object],[object Object],[object Object]"
    itemsecondarytext=""
    itemtertiarytext=""
    itemtext="name"
    itemvalue="id"
    loading="false"
    location="bottom right"
    menuinputclass="my-4"
    menuinputtype="primary"
    modelvalue="1,2,3"
    numericorderby="false"
    placeholder=""
    prepend-inner-icon="M21,16H3V4H21M21,2H3C1.89,2 1,2.89 1,4V16A2,2 0 0,0 3,18H10V20H8V22H16V20H14V18H21A2,2 0 0,0 23,16V4C23,2.89 22.1,2 21,2Z"
    prependtext="Stations: "
    removenonexistentselections="false"
    required="false"
    showemptyarrayasallselected="false"
    someselected="false"
    totalcount="0"
    usechips="false"
  />
</div>
`;
